static/css/styles.css
/* ... */
.closebtn:hover {
    color: black;
}
/** Flash messages **/

/** Header **/
nav {
    background: linear-gradient(to bottom, #ffff66 0%, #ffcc99 100%);
    height: 140px; 
}

.navbar-brand {
    padding-top: 25px;
    padding-bottom: 25px;
    padding-left: 25px;
} 

.navbar-nav { 
    margin-left: auto;  
    padding-top: 45px; 
} 

 .navbar-brand h1 {
   padding-top: 35px;
   padding-left: 30px;  
}

nav li {
    display: inline-block;
    height: 100%;
    padding-right: 40px;
    font-family: 'RocknRoll One', sans-serif;
}

.custom-toggler.navbar-toggler { 
    border-color: transparent; 
    box-shadow: none;
    padding-top: 40px;
} 
        
.custom-toggler .navbar-toggler-icon { 
    background-image: url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
} 

.navbar-toggler.collapsed .close-icon {
    display: none;
   }

.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
    display: inline;
   }

.close-icon {
    color: black; 
}
/** End of header **/

/** Footer **/
.footer { 
    color: black;
    background-color: #ffff66;
    width: 100%;
    bottom: 0px;
    font-family: 'RocknRoll One', sans-serif;
}

.fa:hover {
    opacity: 0.7;
    color: black;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}

.fa-twitter {
  background: #55ACEE;
  color: white;
}

.fa-instagram {
  background: #125688;
  color: white;
}

footer p u:hover {
    opacity: 0.7;
    color: black;
}
/** End of footer **/

/** Who we are **/

.about {
    margin-top: 60px;
    margin-bottom: 60px;
}

.about h2 {
    font-family: 'RocknRoll One', sans-serif;
    font-size: 50px;
    margin-left: 60px;
    margin-top: 60px;
}

.about p {
    margin-top: 30px;
    margin-left: 60px;
    font-size: 18px;
    line-height: 35px;
}

.about-us {
    background-image: linear-gradient(#ffcc99, #ffff66);
    height: 530px;
}

.why-us h3{
    margin-top: 60px;
    margin-bottom: 60px;
    font-size: 50px;
    font-family: 'RocknRoll One', sans-serif;
    text-align: center;
}

.why-us img {
    width: 75%;
    height: 75%;
    margin-left: 140px;
}

.donate-books {
    text-align: center;
    font-family: 'RocknRoll One', sans-serif;
}

.donate-books h3 {
    margin-top: 60px;
    margin-bottom: 60px;
    font-size: 50px;
}

.donate-books h5 {
    font-size: 30px;
    margin-bottom: 40px;
}

.donate-books h6 {
    font-size: 25px;
    margin-bottom: 0;
}

.donate-books p {
    margin-top: 20px;
    margin-bottom: 30px;
    margin-left: 10px;
    margin-right: 10px;
    text-align: justify;
    font-family: 'Roboto', sans-serif;
}

.donate-books-container {
    background-color: #F5F5F5;
    margin-top: 100px;
}
/** End of Who we are **/

/** Club picks  **/
.responsive {
  width: 100%;
  height: auto;
}

.category-tile { 
  position: relative;
  margin-bottom: 100px; 
}
/** End of Club picks  **/

/** Modals **/
.modal-btn {
    margin-top: 10px;
    margin-left: 40px;
}

.book-tile img {
    width: 200px;
    height: 280px; 
}

.book-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}

.about-book {
    margin-left: 40px;
    margin-right: 40px;
}
/** End of modals **/

/** Your picks page **/
.responsive {
  width: 100%;
  height: auto;
}
.category-tile { 
  position: relative;
  margin-bottom: 100px; 
}
/** End of Your picks page **/

/** Login / Register page **/
.myform {
    margin-top: 100px;
    margin-bottom: 50px;
	position: relative;
	display: -ms-flexbox;
	display: flex;
	padding: 1rem;
	-ms-flex-direction: column;
	flex-direction: column;
	width: 100%;
	pointer-events: auto;
	background-color: #fff;
	background-clip: padding-box;
	border: 1px solid rgba(0,0,0,.2);
	border-radius: 1.1rem;
	outline: 0;
	max-width: 500px;
}

.form-group{
    margin: 5px;
}

.mybtn {
    margin-top: 20px;
}
  
.tx-tfm{
    text-transform:uppercase;
}
                 
.login-or {
    position: relative;
    color: #aaa;
    margin-top: 10px;
    margin-bottom: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.span-or {
    display: block;
    position: absolute;
    left: 50%;
    top: 10px;
    margin-left: -25px;
    background-color: #fff;
    width: 50px;
    text-align: center;
}
         
.hr-or {
    height: 1px;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}
/** End of Login / Register page **/

/** Large devices only **/
@media (min-width: 1200px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}

.active a:hover {
    border-bottom: 1px solid black;
}

.active {
  border-bottom: 1px solid black;
}

/** Footer **/
#subscribe {
    padding: 80px; 
    font-size: 16px;
    text-align: center;
    display: inline-block;
    height: 100%;
}

#social-media { 
    padding: 60px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}

.fa {
  padding: 20px;  
  font-size: 30px;
  width: 70px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Who we are page **/
.founder img {
    margin-left: 50px;
    margin-top: 120px;
    height: 350px;
    width: 300px;
    border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}

.category-tile {
    padding-left: 60px;
}

.category-tile img {
    width: 200px;
    height: 280px; 
}

.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}
/* ... */

